<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_local_library_black_24dp"

            android:title="@string/le_my_library" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/le_archive" />
        <item
            android:id="@+id/nav_marketplace"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/le_marketplace" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/le_learning_mode">
            <menu>
                <item
                    android:id="@+id/nav_simulation"
                    android:title="@string/le_simulation" />
                <item
                    android:id="@+id/nav_classic"
                    android:title="@string/le_classic" />
                <item
                    android:id="@+id/nav_duel"
                    android:title="@string/le_duel" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_local_library_black_24dp"

            android:title="@string/le_notifications" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/le_statistics" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/le_synchronize" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/le_help" />

    </group>

</menu>
